[package]
name = "philharmonic-connector-impl-sql-mysql"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-sql-mysql"
description = "MySQL connector implementation for Philharmonic (sql_query capability)."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
